syntax = "proto3";

package rivet.backend.user;

import "legacy/proto/common.proto";
import "legacy/proto/backend/upload.proto";

message User {
	reserved 5, 9;

	rivet.common.Uuid user_id = 1;
	string display_name = 2;
	uint32 account_number = 3;
	string avatar_id = 4;
	optional rivet.common.Uuid profile_upload_id = 10;
	optional string profile_file_name = 11;
	optional upload.Provider profile_provider = 14;
	int64 join_ts = 6;
	string bio = 7;
	bool is_admin = 8;
	optional int64 delete_request_ts = 12;
	optional int64 delete_complete_ts = 13;
}

